
- Logo update (Thanks to Mikko Salo).
- Added setup option to use a single 8 bpp OSD area.
- Updated EPGSearch auxiliary information parsing.
- Added Hungarian translation (Thanks to Füley István).

2007-09-12: Version 1.0.5

- Backported from 1.1.2.

2008-01-20: Version 1.0.6

- Added Italian translation (Thanks to Diego Pierotto).
- Added '-Wno-parentheses' to the compiler options.

2007-08-14: Version 1.1.0

- Updated for vdr-1.5.7.
- Minor logo update.
- Updated French translation (Thanks to neptunvasja @ VDRPortal).

2007-08-19: Version 1.1.1

- Updated for vdr-1.5.8.

2007-09-12: Version 1.1.2

- Cleaned up translations.
- Fixed date string in channel info.
- Removed logos.

2007-11-04: Version 1.1.3

- Updated for vdr-1.5.10.
- Updated Makefile 'i18n' targets.
- Fixed OSD dimension code.
- Added subtitle tracks information into the event and
  recording info menus.

2008-01-20: Version 1.1.4

- Added Italian translation (Thanks to Diego Pierotto).
- Added '-Wno-parentheses' to the compiler options.
- Mapped 'kInfo' as help key in setup menu.

2008-02-18: Version 1.1.5

- Updated for vdr-1.5.15.
- Replaced asprinf with cString.
- Fixed 'eventtimer' symbol (Thanks to Michaël Nival).
- Updated French translation (Thanks to Michaël Nival).
- Added 'FLSH' SVDRP command for logo cache flushing.
- Removed the "Identify channel by: name/data" setup option
  and increased the default logo cache size to 100.
- Improved performance.

2008-03-27: Version 1.6.0

- Updated for vdr-1.6.0.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed the scrollbar height calculation.
- Improved performance.

2008-06-20: Version 1.6.1

- Updated Italian translation (Thanks to Diego Pierotto).
- Added Russian translation (Thanks to Alexander Gross).
- Readded a hack to prevent menu flickering (Thanks to
  Harri Kukkonen for reporting this one).

2008-xx-xx: Version 1.6.2

- Converted HISTORY and fi_FI.po to UTF-8.
- Updated Italian translation (Thanks to Diego Pierotto).